<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigationMyFood"
        android:icon="@drawable/ic_kitchen_white_24px"
        app:showAsAction="never"
        android:title="@string/my_food" />
    <item
        android:id="@+id/navigationAddFood"
        android:icon="@drawable/ic_add_white_24px"
        app:showAsAction="never"
        android:title="@string/new_food" />
    <item
        android:id="@+id/navigationMyRecipes"
        android:icon="@drawable/ic_kitchen_white_24px"
        app:showAsAction="never"
        android:title="@string/my_recipes" />
    <item
        android:id="@+id/navigationAddRecipe"
        android:icon="@drawable/ic_add_white_24px"
        app:showAsAction="never"
        android:title="@string/new_recipe" />

    <item
        android:id="@+id/navigationSynchronize"
        android:icon="@drawable/ic_baseline_sync_white_24px"
        android:title="@string/synchronize" />
</menu>