<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context=".food_diary_goal.MyProfileGenderActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="18dp">



        <!-- Gender headline -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack" />
            <TextView
                android:id="@+id/textViewHeadlineB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack" />
        </LinearLayout>
        <!-- //Gender headline -->

        <!-- Gender input -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroupInpGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:paddingTop="12dp">

                <RadioButton
                    android:id="@+id/radioButtonInpA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male"
                    android:layout_marginRight="5dp"/>

                <RadioButton
                    android:id="@+id/radioButtonInpB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>
        </LinearLayout>
        <!-- //Gender input -->


        <!-- Next button -->
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:background="@drawable/btn_primary"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite" />
        <!-- //Next button -->

    </LinearLayout>
</ScrollView>