<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".setup.SetupBPermissionsActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!-- Bg -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/img_bg_2" />
    </LinearLayout>
    <!-- //Bg -->

    <!-- Body -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <!-- Header -->
        <TextView
            android:id="@+id/textViewHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/welcome_to"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorWhite" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewHeadline"
            android:layout_marginTop="6dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_white" />
        <!-- //Header -->


        <!-- Footer -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical">


            <!-- Permissions -->

            <TextView
                android:id="@+id/textViewPermissionHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="12dp"
                android:text="@string/save_images_on_sdcard" />

            <TextView
                android:id="@+id/textViewPleaseGivePermissions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/please_give_permissions_so_that_we_can_save_the_images_on_your_phone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite" />

            <TextView
                android:id="@+id/textViewPermissionsWhy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="18dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:text="@string/this_will_make_the_app_fast" />

            <Button
                android:id="@+id/buttonPermissionsSubmit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:background="@drawable/btn_success"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite" />

            <!-- //Permissions -->
        </LinearLayout>
        <!-- //Footer -->

    </RelativeLayout>
    <!-- //Body -->
</RelativeLayout>